# spawnhub-examples

./: .gitignore  CLAUDE.md  README.md  agent-persona.json
autogen/: README.md  pipeline.py  pyproject.toml
crewai/: .env.example  README.md  pipeline.py  pyproject.toml
docs/: ingestion-api-guide.md  ingestion-api.yaml
google-adk/: .env.example  README.md  pipeline.py  pyproject.toml
langchain-langgraph/: .env.example  README.md  pipeline.py  pyproject.toml
langchain-langgraph/sample_agent/: agent.py  main.py  otel_callback.py  pipeline.py  telemetry.py  tools.py
openai-agents/: .env.example  README.md  multi_agent_pipeline.py  pyproject.toml
semantic-kernel/: README.md  pipeline.py  pyproject.toml
